--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -21,3 +21,24 @@
     height: 0px;
     background-color: red;
   } */
+  .loginBackground{
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-image: url('./busnisse3.jpeg');
+  }
+  .activeLoanForm-enter{
+    opacity: 0;
+  }
+  .activeLoanForm-enter-active{
+    opacity: 1;
+    transition: all 1s linear;
+  }
+  .activeLoanForm-exit{
+    opacity: 1;
+
+  }
+  .activeLoanForm-exit-active{
+    opacity: 0;
+    transform: translateX(20%);
+    transition: all 1s linear;
+  }
